--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 # GOOGLE_API_KEY = AIzaSyBGTmycbxpfyZsvSn2_vzGqU25QIRzLl-0
 # GOOGLE_API_KEY = AIzaSyCXtAFnWAbnP637BxJP7GQ1OlahDddDmtU
-GOOGLE_API_KEY = AIzaSyACpYhb50hhs9YLamXKStSA_pTZuh756jQ
-CLOUDINARY_CLOUD_NAME = dbqzjf3d1
-CLOUDINARY_API_KEY = 785487218913542
-CLOUDINARY_API_SECRET = 09zsKI8GIVFFArA75b3i9eIIp5c
+GOOGLE_API_KEY = 
+CLOUDINARY_CLOUD_NAME = 
+CLOUDINARY_API_KEY = 
+CLOUDINARY_API_SECRET =
