--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-GOOGLE_API_KEY = AIzaSyACpYhb50hhs9YLamXKStSA_pTZuh756jQ
-CLOUDINARY_CLOUD_NAME = dbqzjf3d1
-CLOUDINARY_API_KEY = 785487218913542
-CLOUDINARY_API_SECRET = 09zsKI8GIVFFArA75b3i9eIIp5c
+GOOGLE_API_KEY = 
+CLOUDINARY_CLOUD_NAME = 
+CLOUDINARY_API_KEY = 
+CLOUDINARY_API_SECRET =
